--- a/index1.html
+++ b/index1.html
@@ -8,7 +8,7 @@
       <meta name="author" content="">
       
       <title>People's United Bank Financial Center</title>
-            <link href="flexnav.css" media="screen, projection" rel="stylesheet" type="text/css">
+            <link href="flexnav1.css" media="screen, projection" rel="stylesheet" type="text/css">
       <link type="text/css" href="modifications.css" rel="stylesheet">
       <link type="text/css" href="required.css" rel="stylesheet">
       <link type="text/css" href="custom.css" rel="stylesheet">
